[package]
name = "embassy-hal-common"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"

[features]
defmt-trace = [ ]
defmt-debug = [ ]
defmt-info = [ ]
defmt-warn = [ ]
defmt-error = [ ]

[dependencies]
embassy = { version = "0.1.0", path = "../embassy" }

defmt = { version = "0.2.0", optional = true }
log = { version = "0.4.11", optional = true }
cortex-m = "0.7.1"
usb-device = "0.2.7"
num-traits = { version = "0.2.14", default-features = false }
