[package]
name = "embassy-hal-common"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"

[features]

[dependencies]
embassy = { version = "0.1.0", path = "../embassy" }

defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }
cortex-m = "0.7.3"
usb-device = "0.2.8"
num-traits = { version = "0.2.14", default-features = false }
