[package]
name = "embassy-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
syn = { version = "1.0.76", features = ["full", "extra-traits"] }
quote = "1.0.9"
darling = "0.13.0"
proc-macro2 = "1.0.29"

[lib]
proc-macro = true

[features]
std = []
wasm = []

# Enabling this cause interrupt::take! to require embassy-executor
rtos-trace-interrupt = []
