[package]
name = "embassy-mcxa"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Embassy Hardware Abstraction Layer (HAL) for NXP MCXA series of MCUs"
repository = "https://github.com/embassy-rs/embassy"
keywords = ["embedded", "hal", "nxp", "mcxa", "embassy"]
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.embassy.dev/embassy-mcxa"

[package.metadata.embassy]
build = [
    {target = "thumbv8m.main-none-eabihf", features = ["defmt", "unstable-pac"]},
]

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/embassy/blob/embassy-mcxa-v$VERSION/embassy-mcxa/src/"
src_base_git = "https://github.com/embassy-rs/embassy/blob/$COMMIT/embassy-mcxa/src/"

features = ["defmt", "unstable-pac"]
flavors = [
    { name = "mcx-a256", target = "thumbv8m.main-none-eabihf" },
]

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
# If you would like "device" to be an optional feature, please open an issue.
cortex-m-rt = { version = "0.7", features = ["device"] }
critical-section = "1.2.0"
defmt = { version = "1.0", optional = true }
embassy-embedded-hal = { version = "0.5.0", path = "../embassy-embedded-hal" }
embassy-hal-internal = { version = "0.4.0", path = "../embassy-hal-internal", features = ["cortex-m", "prio-bits-3"] }
embassy-sync = { version = "0.7.2", path = "../embassy-sync" }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-nb = { version = "1.0" }
embedded-io = "0.7"
embedded-io-async = { version = "0.7.0" }
heapless = "0.9"
maitake-sync = { version = "0.2.2", default-features = false, features = ["critical-section", "no-cache-pad"] }
nxp-pac = { git = "https://github.com/embassy-rs/nxp-pac.git", rev = "560e74384e20940a3c25e0435a6fbdc66644b558", features = ["rt", "mcxa256"] }
nb = "1.1.0"
paste = "1.0.15"

# `time` dependencies
embassy-time = { version = "0.5.0", path = "../embassy-time" }
embassy-time-driver = { version = "0.2.1", path = "../embassy-time-driver", features = ["tick-hz-1_000_000"] }
embassy-time-queue-utils = { version = "0.3.0", path = "../embassy-time-queue-utils" }

rand-core-06 = { package = "rand_core", version = "0.6" }
rand-core-09 = { package = "rand_core", version = "0.9" }

[features]
default = ["rt", "swd-swo-as-gpio"]

# Base defmt feature enables core + panic handler
# Use with one logger feature: defmt-rtt (preferred) or defmt-uart (fallback)
defmt = ["dep:defmt", "nxp-pac/defmt"]

unstable-pac = []

# Allows for using SOSC pins as normal GPIOs.
#
# DISABLING this allows for use of SOSC, but reserves the GPIO pins required.
# ENABLING this means SOSC cannot be set/configured, but makes the GPIO pins available
sosc-as-gpio = []

# Allows for using SWDIO and SWCLK pins as normal GPIOs.
#
# WARNING: This WILL cause problems if you plan to use defmt over RTT,
# or otherwise debug the system while running.
#
# If this feature is enabled, the relevant pin(s) will be set to floating inputs
# in the HAL init function.
#
# This does NOT include the SWO pin.
swd-as-gpio = []

# Allows for using the SWD SWO pins as a normal GPIO. This is not used for
# basic probe-rs/rtt usage, but is sometimes used with ITM.
#
# If this feature is enabled, the relevant pin(s) will be set to floating inputs
# in the HAL init function.
swd-swo-as-gpio = []

# Allows for using the extra JTAG pins (TDI, ISPMODE_N) as normal GPIOs. You
# must also select `swd-as-gpio`, `swd-swo-as-gpio`, and MAYBE `dangerous-reset-as-gpio`
# to recover all JTAG pins. These are called "extras" because they aren't also used
# for normal SWD/SWO.
jtag-extras-as-gpio = []

# Allows for using the reset pin as a normal GPIO.
#
# This is NOT recommended, and we have not currently tested whether it remains
# possible to reset the device and reflash using probe-rs after enabling this
# feature. Use at your own risk!
dangerous-reset-as-gpio = []

# dummy feature to silence embassy-hal-internal lint
#
# This feature makes no change to embassy-mcxa's operation.
rt = []

# Enable perf counters
perf = []
