[package]
name = "embassy-mcxa"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Embassy Hardware Abstraction Layer (HAL) for NXP MCXA series of MCUs"
repository = "https://github.com/embassy-rs/embassy"
keywords = ["embedded", "hal", "nxp", "mcxa", "embassy"]
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.embassy.dev/embassy-mcxa"

publish = false

[package.metadata.embassy]
build = [
    {target = "thumbv8m.main-none-eabihf", features = ["defmt", "unstable-pac", "mcxa2xx"]},
    {target = "thumbv8m.main-none-eabihf", features = ["defmt", "unstable-pac", "mcxa5xx"]},
]

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/embassy/blob/embassy-mcxa-v$VERSION/embassy-mcxa/src/"
src_base_git = "https://github.com/embassy-rs/embassy/blob/$COMMIT/embassy-mcxa/src/"

features = ["defmt", "unstable-pac"]
flavors = [
    { name = "mcx-a256", target = "thumbv8m.main-none-eabihf", features = ["mcxa2xx"] },
    { name = "mcx-a577", target = "thumbv8m.main-none-eabihf", features = ["mcxa5xx"] },
]

[dependencies]
bbqueue = { version = "0.7.0", features = ["disable-cache-padding"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
# If you would like "device" to be an optional feature, please open an issue.
cortex-m-rt = { version = "0.7", features = ["device"] }
critical-section = "1.2.0"
defmt = { version = "1.0", optional = true }
embassy-embedded-hal = { version = "0.6.0", path = "../embassy-embedded-hal" }
embassy-futures = { version = "0.1.2", path = "../embassy-futures" }
embassy-hal-internal = { version = "0.5.0", path = "../embassy-hal-internal", features = ["cortex-m", "prio-bits-3"] }
embassy-sync = { version = "0.8.0", path = "../embassy-sync" }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-nb = { version = "1.0" }
embedded-io = "0.7"
embedded-io-async = { version = "0.7.0" }
embedded-mcu-hal = { version = "0.2.0", optional = true }
embedded-storage = "0.3.1"

# Custom executor support
embassy-executor = { version = "0.10.0", path = "../embassy-executor" }

# `time` dependencies
embassy-time = { version = "0.5.1", path = "../embassy-time" }
embassy-time-driver = { version = "0.2.2", path = "../embassy-time-driver", features = ["tick-hz-1_000_000"] }
embassy-time-queue-utils = { version = "0.3.2", path = "../embassy-time-queue-utils" }

grounded = { version = "0.2.1", features = ["cas", "critical-section"] }
heapless = "0.9"
maitake-sync = { version = "0.3.0", default-features = false, features = ["critical-section", "no-cache-pad"] }
nb = "1.1.0"
nxp-pac = { git = "https://github.com/embassy-rs/nxp-pac.git", rev = "e259e278b91e26198b179ff326fe14c467188dcb", features = ["rt"] }
paste = "1.0.15"

rand-core-06 = { package = "rand_core", version = "0.6" }
rand-core-09 = { package = "rand_core", version = "0.9" }
rand-core-10 = { package = "rand_core", version = "0.10" }

[build-dependencies]
nxp-pac = { git = "https://github.com/embassy-rs/nxp-pac.git", rev = "e259e278b91e26198b179ff326fe14c467188dcb", default-features = false, features = ["metadata"] }
proc-macro2 = "1.0.106"
quote = "1.0.45"
regex = "1.12.3"
syn = "2.0.117"
convert_case = "0.11"
indexmap = "2.14.0"

[features]
default = ["rt", "swd-swo-as-gpio", "dma-ipd-req"]

# Base defmt feature enables core + panic handler
# Use with one logger feature: defmt-rtt (preferred) or defmt-uart (fallback)
defmt = ["dep:defmt", "nxp-pac/defmt"]

# Enable optional embedded-mcu-hal traits
embedded-mcu-hal = ["dep:embedded-mcu-hal"]

unstable-pac = []

# Allows for using SOSC pins as normal GPIOs.
#
# DISABLING this allows for use of SOSC, but reserves the GPIO pins required.
# ENABLING this means SOSC cannot be set/configured, but makes the GPIO pins available
sosc-as-gpio = []

# Allows for using the ROSC (32k external clock) pins as normal GPIOs.
#
# DISABLING this allows for use of the 32k clock, but reserves the GPIO pins required.
# ENABLING this means the 32k clock cannot be set/configured, but makes the GPIO pins available
#
# NOTE: Only applicable to MCXA5xx.
rosc-32k-as-gpio = []

# Allows for using SWDIO and SWCLK pins as normal GPIOs.
#
# WARNING: This WILL cause problems if you plan to use defmt over RTT,
# or otherwise debug the system while running.
#
# If this feature is enabled, the relevant pin(s) will be set to floating inputs
# in the HAL init function.
#
# This does NOT include the SWO pin.
swd-as-gpio = []

# Allows for using the SWD SWO pins as a normal GPIO. This is not used for
# basic probe-rs/rtt usage, but is sometimes used with ITM.
#
# If this feature is enabled, the relevant pin(s) will be set to floating inputs
# in the HAL init function.
swd-swo-as-gpio = []

# Allows for using the extra JTAG pins (TDI, ISPMODE_N) as normal GPIOs. You
# must also select `swd-as-gpio`, `swd-swo-as-gpio`, and MAYBE `dangerous-reset-as-gpio`
# to recover all JTAG pins. These are called "extras" because they aren't also used
# for normal SWD/SWO.
jtag-extras-as-gpio = []

# Allows for using the reset pin as a normal GPIO.
#
# This is NOT recommended, and we have not currently tested whether it remains
# possible to reset the device and reflash using probe-rs after enabling this
# feature. Use at your own risk!
dangerous-reset-as-gpio = []

# Unmasks DMA IPD_REQ hardware lines in AHBSC during init. (only on MCXA5xx)
#
# If this feature is not set, something else is responsible for unmasking them
# when driving DMA transfers from hardware peripheral requests.
# This can either be another (trustzone secure) binary or from IFR0 CFPA Trustzone presets.
dma-ipd-req = []

# dummy feature to silence embassy-hal-internal lint
#
# This feature makes no change to embassy-mcxa's operation.
rt = []

# Enable perf counters
perf = []

# Enable the custom executor platform implementation, which allows for low-power modes.
#
# If this feature is enabled, users should NOT enable `embassy-executor/platform-cortex-m` or any other executor platform.
executor-platform = []

# This feature is not done yet, don't use it!
unstable-osc32k = []

#
# Chip family selection
#
mcxa2xx = ["nxp-pac/mcxa256"]
mcxa5xx = ["nxp-pac/mcxa577"]

[dev-dependencies]
embassy-executor = { version = "0.10.0", path = "../embassy-executor", features = ["platform-cortex-m", "executor-interrupt", "executor-thread"] }
embedded-storage = "0.3.1"
panic-halt = "1.0.0"
static_cell = "2.1.1"
